# pyinfra-python-app-deploy

./: .gitignore  Dockerfile  Makefile  README.md  Vagrantfile  pyproject.toml  test.http
app/: server.py
deploy/: setup_server.py
deploy/files/: app.tar.gz--exclude  gunicorn.service
deploy/group_data/: app_servers.py
deploy/inventories/: staging.py
deploy/tasks/: install_docker.py  install_nginx.py
deploy/templates/: nginx.conf
