[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Senhaji-Rhazi-Hamza <hamza.senhaji-rhazi@epita.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
pyinfra = "^1.4.11"
Flask = "^2.0.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
